dsicovered issue with css

--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 <style>
 
-h2{
-  
+h1{
+text-align: center;
 font-size: 70px
 
 }
+
+font-family: 'Oswald', sans-serif;
+
 
 
   </style>
